Added /course/:id/grades endpoint that returns all semesters
