# api/docs/swagger.yaml
@@ -474,6 +474,25 @@ paths:
           description: A course
           schema:
             $ref: '#/definitions/schema.Course'
+  /course/{id}/grades:
+    get:
+      description: '"Returns the grade distribution aggregated by semester for a course"'
+      operationId: gradeAggregationCourseEndpoint
+      parameters:
+      - description: ID of course to get grades for
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: A grade distribution array for the course
+          schema:
+            items:
+              type: integer
+            type: array
   /course/{id}/sections:
     get:
       description: '"Returns the all of the sections of the course with given ID"'
@@ -1264,7 +1283,7 @@ securityDefinitions:
     type: apiKey
 swagger: "2.0"
 x-google-backend:
-  address: https://dev-nebula-api-1062216541483.us-south1.run.app
+  address: REDACTED
 x-google-endpoints:
 - allowCors: true
   name: nebula-api-2lntm5dxoflqn.apigateway.nebula-api-368223.cloud.goog
