# api/routes/course.go
@@ -18,4 +18,7 @@ func CourseRoute(router *gin.Engine) {
 	// Endpoint to get the list of sections of the queried course, courses
 	courseGroup.GET("/sections", controllers.CourseSectionSearch())
 	courseGroup.GET("/:id/sections", controllers.CourseSectionById())
+
+	// Endpoint to get grades for a course by its course id
+	courseGroup.GET("/:id/grades", controllers.GradesAggregationCourseEndpoint())
 }
